# bob.bio.spear

./: .flake8  .gitignore  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  buildout-dev.cfg  buildout.cfg  buildout_idiap.cfg  comit_out.txt  databases.txt  develop.cfg  pyproject.toml  requirements.txt  setup.py  test-requirements.txt  version.txt
bob/bio/spear/: __init__.py  audio_processing.py  utils.py
bob/bio/spear/algorithm/: __init__.py  gmm.py  isv.py  plda.py  speechbrain_interface.py
bob/bio/spear/annotator/: __init__.py  energy_2gauss.py  energy_thr.py  external.py  mod_4hz.py
bob/bio/spear/config/algorithm/: gmm_256g.py  gmm_regular_banca.py  gmm_timit.py  gmm_tomi.py  gmm_tomi_scfc.py  gmm_voxforge.py  isv_avspoof.py  isv_mobio.py  isv_voxforge.py  ivec_avspoof.py  ivec_cosine_voxforge.py  ivec_plda_mobio.py  ivec_plda_voxforge.py  jfa_voxforge.py
bob/bio/spear/config/annotator/: energy_2gauss.py  energy_thr.py  mod_4hz.py
bob/bio/spear/config/database/: ami.py  asvspoof.py  asvspoof2017.py  avspoof.py  banca_audio_G.py  cpqd_replay.py  mini_voxforge.py  mobio.py  mobio_audio_female.py  mobio_audio_male.py  mobio_female.py  mobio_male.py  nist_sre04to16.py  nist_sre05.py  nist_sre06.py  nist_sre08.py  nist_sre10.py  nist_sre12.py  timit.py  voicepa.py  voxceleb.py  voxforge.py
bob/bio/spear/config/database/banca/G/dev/: for_models.lst  for_scores.lst
bob/bio/spear/config/database/banca/G/eval/: for_models.lst  for_scores.lst
bob/bio/spear/config/database/banca/G/norm/: train_world.lst
bob/bio/spear/config/database/mobio/mobile0-female/dev/: for_models.lst  for_probes.lst
bob/bio/spear/config/database/mobio/mobile0-female/eval/: for_models.lst  for_probes.lst
bob/bio/spear/config/database/mobio/mobile0-male/dev/: for_models.lst  for_probes.lst
bob/bio/spear/config/database/mobio/mobile0-male/eval/: for_models.lst  for_probes.lst  for_tnorm.lst  for_znorm.lst
bob/bio/spear/config/database/mobio/mobile0-male/norm/: train_world.lst
bob/bio/spear/config/database/timit/2/dev/: for_models.lst  for_scores.lst
bob/bio/spear/config/database/timit/2/norm/: train_world.lst
bob/bio/spear/config/extractor/: cqcc20.py  htk.py  imfcc20.py  lfcc20.py  lfcc_60.py  mfcc20.py  mfcc_60.py  mfcc_kaldi.py  rfcc20.py  scfc20.py  scmc20.py  spro.py  ssfc20.py
bob/bio/spear/config/grid/: demanding.py  modest.py
bob/bio/spear/config/pipeline/: mfcc60_gmm_default.py  mfcc60_gmm_mini.py  mfcc60_gmm_mobio.py  mfcc60_gmm_voxforge.py  mfcc60_gmmmini.py  mfcc60_gmmvoxforge.py  mfcc60_isv_default.py  mfcc60_isv_mini.py  mfcc60_isv_voxforge.py  mfcc60_isvvoxforge.py  mfcc60_ivector.py  mfcc60_ivector_plda.py  mfcc60_voxforgegmm.py  mfcc60_voxforgegmm_dask.py  mini_voxforgegmm.py  pytorch_test.py  speechbrain_ecapa_voxceleb.py  speechbrain_pipeline.py
bob/bio/spear/config/preprocessor/: energy_2gauss.py  energy_thr.py  external.py  mod_4hz.py
bob/bio/spear/database/: __init__.py  ami.py  asvspoof.py  asvspoof2017.py  avspoof.py  cpqd_replay.py  database.py  mobio.py  nist_sre05.py  nist_sre06.py  nist_sre08.py  nist_sre10.py  nist_sre12.py  voicepa.py  voxforge.py
bob/bio/spear/embeddings/: __init__.py  dltresnet.py  utils.py  wavlm.py
bob/bio/spear/extractor/: CQCCFeatures.py  Cepstral.py  HTKFeatures.py  Kaldi.py  SPROFeatures.py  __init__.py  cepstral_extended.py  pytorch_embeddings.py  speechbrain_embeddings.py
bob/bio/spear/preprocessor/: Base.py  Energy_2Gauss.py  Energy_Thr.py  External.py  Mod_4Hz.py  __init__.py
bob/bio/spear/script/: baselines.py  db_download.py  download_voxforge.py  fusion_llr.py
bob/bio/spear/test/: test_algorithms.py  test_annotators.py  test_audio_processing.py  test_databases.py  test_db_download.py  test_download_voxforge.py  test_extractors.py  test_pipelines.py  test_preprocessors.py  test_transformers.py  utils.py
bob/bio/spear/test/data/: lfcc_60.hdf5  mfcc_60.hdf5  sample_spectrogram.npy  vad_energy_2gauss.hdf5  vad_energy_thr.hdf5  vad_mod_4hz.hdf5
bob/bio/spear/transformer/: __init__.py  audio_reader_to_sample.py  augmentation.py  path_to_audio.py  preprocessing.py  resample.py  wav_to_sample.py
bob/bio/spear/utils/: __init__.py  extraction.py
conda/: meta.yaml
doc/: baselines.rst  conf.py  extra-intersphinx.txt  implementation.rst  implemented.rst  index.rst  links.rst  nitpick-exceptions.txt  references.rst
doc/leaderboard/: leaderboard.rst  mobio_audio_female.rst  mobio_audio_male.rst  nist_sre04_16.rst  voxceleb.rst  voxforge.rst
src/bob/bio/spear/: __init__.py  audio_processing.py  utils.py
src/bob/bio/spear/annotator/: energy_2gauss.py  energy_thr.py  mod_4hz.py
src/bob/bio/spear/config/database/: asvspoof.py  asvspoof2017.py  avspoof.py  mini_voxforge.py  mobio_audio_female.py  mobio_audio_male.py  nist_sre04to16.py  timit.py  voicepa.py  voxceleb.py  voxforge.py
src/bob/bio/spear/config/extractor/: mfcc60.py
src/bob/bio/spear/config/pipeline/: mfcc60_gmm_mini.py  mfcc60_isv_default.py  mfcc60_isv_mini.py  mfcc60_ivector_postprocess.py
src/bob/bio/spear/database/: __init__.py  asvspoof.py  asvspoof2017.py  avspoof.py  database.py  mobio.py  nist_sre04to16.py  timit.py  utils.py  voicepa.py  voxceleb.py  voxforge.py
src/bob/bio/spear/extractor/: speechbrain_embeddings.py
src/bob/bio/spear/transformer/: resample.py
tests/: test_annotators.py  test_audio_processing.py  test_databases.py  test_pipelines.py  test_transformers.py  utils.py
tests/data/: mfcc_60.hdf5  sample.hdf5  sample_cepstral.npy  sample_energy.npy  vad_energy_thr.hdf5
